--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-
+    <title>Coding Literacy, Practices & Cultures</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://www.openprocessing.org/openprocessing_sketch.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
     <script src="js/mySketch.js"></script>
@@ -50,7 +50,7 @@
             transition: color 0.5s ease;
         }
         h2{
-            font-weight: 400;
+            font-weight: 200%;
             color:#ff0000;
             font-size:400%;
             line-height: 1.3em;
@@ -122,6 +122,8 @@
         .spacer{
             height:15%;
             width:15%;
+            margin:0.5em 0;
+            display:none;
         }
         .headline img{
             float:left;
@@ -143,13 +145,35 @@
             margin:0 1em;
             height:50px;
         }
+        /* Portrait */
+        @media only screen
+        and (min-device-width: 320px)
+        and (max-device-width: 768px)
+        and (-webkit-min-device-pixel-ratio: 2)
+        and (orientation: portrait) {
+            .item img{
+                display:none;
+            }
+            #sketch-holder{
+                width:100%;
+                margin: 0 auto;
+            }
+            .item img{
+                display:none;
+            }
+            h2{
+                font-size: 200%;
+            }
+            .header{
+                text-align: center;
+            }
+        }
     </style>
 </head>
 <body>
 <div id="wrapper">
 <div class="header">
     <div id="sketch-holder">
-        <!-- Our sketch will go here! -->
     </div>
     <h2 id="page-title">Coding Literacy, Practices & Cultures</h2>
     <img class="spacer" src="images/spacer.png">
