--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 display:none;
             }
             #sketch-holder{
-                width:100%;
+                display: none;
             }
             .item img{
                 display:none;
