--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 $(".item").each(function() {
                     var objectBottom = $(this).offset().top + ($(this).outerHeight() /3);
                     if (objectBottom < windowBottom) {
-                        if ($(this).css("opacity")==0) {$(this).fadeTo(800,1);}
+                        if ($(this).css("opacity")<1) {$(this).fadeTo(800,1);}
                     } else {
                         if ($(this).css("opacity")==1) {$(this).fadeTo(800,0.5);}
                     }
