--- a/index.html
+++ b/index.html
@@ -169,6 +169,25 @@
                 text-align: center;
             }
         }
+        @media screen and (max-width: 992px) {
+            h2{
+                font-size: 200%;
+            }
+            canvas{
+                width:300px !important;
+                height:300px !important;
+            }
+            .headline .date{
+                margin:0;
+                padding:.5em 0 0 0;
+            }
+            .item h3{
+                font-size: 140%;
+            }
+            h4{
+                font-size: 100%;
+            }
+        }
     </style>
 </head>
 <body>
