--- a/index.html
+++ b/index.html
@@ -165,6 +165,9 @@
             h2{
                 font-size: 200%;
             }
+            h3{
+                font-size: 140%;
+            }
             .header{
                 text-align: center;
             }
