--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         }
         a:hover, a:focus{
             color: #ce65bf;
-            border-bottom: 1px solid #ce278e;
+            border-bottom: none;
             transition: color 0.5s ease;
         }
         h2{
