--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
             <h4>More about Juliane Ahlborn</h4>
             <ul>
                 <li>Research Portal of Saxony-Anhalt: <a href="https://forschung-sachsen-anhalt.de/pl/ahlborn-117151">forschung-sachsen-anhalt.de/pl/ahlborn-117151</a></li>
+                <li>Research Project <a href="https://www.ebdw.ovgu.de/ebdw/en/aiandart-p-500.html">ebdw.ovgu.de/ebdw/en/aiandart-p-500.html</a></li>
             </ul>
         </div>
     </div>
