--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <div class="more">
             <h4>More about Eleni-Ira Panourgia</h4>
             <ul>
-                <li>Her personal website: <a href="http://www.eleniirapanourgia.com/">eleniirapanourgia.com/</a></a></li>
+                <li>Her personal website: <a href="http://www.eleniirapanourgia.com/">eleniirapanourgia.com</a></li>
             </ul>
         </div>
     </div>
