--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <div class="more">
             <h4>More about Pierre Depaz</h4>
             <ul>
-                <li>His personal website: <a href="https://pierredepaz.net/">pierredepaz.net/</a></li>
+                <li>His personal website: <a href="https://pierredepaz.net/">pierredepaz.net</a></li>
                 <li>Pierre Depaz on twitter: <a href="https://twitter.com/kasipierre">twitter.com/kasipierre</a></li>
             </ul>
         </div>
