--- a/index.html
+++ b/index.html
@@ -191,6 +191,11 @@
                 font-size: 100%;
             }
         }
+        @media screen and (max-width: 1300px) {
+            h2{
+                font-size: 300%;
+            }
+        }
     </style>
 </head>
 <body>
