--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             transition: color 0.5s ease;
         }
         h2{
-            font-weight: 200%;
+            font-weight: 500;
             color:#ff0000;
             font-size:400%;
-            line-height: 1.3em;
+            line-height: 1.2em;
             margin:0;
         }
         h3 {
