--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             font-family:"Montserrat";
         }
         #wrapper{
-            width:70%;
+            width:60%;
             margin:auto;
         }
         p{
@@ -55,7 +55,7 @@
         h2{
             font-weight: 500;
             color:#ff0000;
-            font-size:400%;
+            font-size:350%;
             line-height: 1.2em;
             margin:0;
         }
@@ -120,7 +120,7 @@
             float:left;
             height:40%;
             width:40%;
-            margin:0 1em 1em 0;
+            margin:-0.5em 1em 1em 0;
         }
         .spacer{
             height:15%;
