--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
     <script src="js/mySketch.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript">
+
         $(window).on("load",function() {
+
             $(window).scroll(function() {
+
                 var windowBottom = $(this).scrollTop() + $(this).innerHeight();
                 $(".item").each(function() {
                     var objectBottom = $(this).offset().top + ($(this).outerHeight()/3);
-                    if (objectBottom < windowBottom) {
-                        if ($(this).css("opacity")<1) {$(this).fadeTo(800,1);}
-                    }else if(objectBottom < window.pageYOffset){
-                        alert('test');
+                    if (objectBottom < windowBottom && (objectBottom + $(this).height() > $(this).scrollTop()  ) ) {
 
-                    } else {
-                        if ($(this).css("opacity")==1) {$(this).fadeTo(300,0.24);}
+                        if ($(this).css("opacity")<1) {$(this).fadeTo(800,1);}
+                    }else{
+                        $(this).css({'opacity':0.24});
                     }
                 });
             }).scroll(); //invoke scroll-handler on page-load
