--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             float:left;
             width:15%;
             height:15%;
+            margin:2em 0 0 0;
         }
         .item p{
             clear:both;
@@ -251,7 +252,7 @@
         <div class="headline">
             <img src="images/image2.png">
             <div class="date">03. Dec. 20 - 17-19h</div>
-            <h3 class="main">Stefan Püst on Coding Practices and Music:</h3><h3>Sequencing in Live Performances - Towards a textual language interface for high level composition </h3>
+            <h3 class="main">Stefan Püst on Coding Practices and Music:</h3><h3>Towards a Textual Language Interface for High Level Composition </h3>
         </div>
         <p>After earning his B.Sc. in Computer Science at the University of Applied Science in Brandenburg, <span class="name">Stefan Püst</span> worked as Android App developer for telematics system at the IBM Client Innovation Center in Magdeburg, next to pursuing a master&rsquo;s degree in the digital media program at the University of Applied Science in Brandenburg. Since 2016 he has worked as IT admin at the Film University Babelsberg. He was responsible for managing the computer lab infrastructure for the Animation, Set Design and Creative Technologies programs. Since 2019 Stefan Püst is a research associate in the Creative Technologies group and pursues a PhD and researches music interaction mechanisms.</p>
         <div class="more">
@@ -266,7 +267,7 @@
         <div class="headline">
             <img src="images/image3.png">
             <div class="date">07. Jan. 21 - 15-17h</div>
-            <h3 class="main">Pierre Depaz</h3><h3>On the role of aesthetics in understanding source code</h3>
+            <h3 class="main">Pierre Depaz</h3><h3>On the Role of Aesthetics In Understanding Source Code</h3>
         </div>
         <p><span class="name">Pierre Depaz</span> practically, writes software for arts and media organizations, such as <a href="https://pierredepaz.net/project/000_thelitany.json">museum pieces</a>, <a href="https://pierredepaz.net/project/010_skypeheartbreakshow.json">interactive installations</a>, <a href="https://pierredepaz.net/project/006_recompositions.json">machine learning</a> or <a href="https://pierredepaz.net/project/020_synaesthesiaplayground.json">live performance</a>, amongst others. Conceptually, he wrote versions of <a href="https://github.com/periode/augmenting-gallery">augmenting</a> the gallery, <a href="https://github.com/periode/politics-of-code/">politics</a> of code, software art (<a href="https://github.com/periode/software-art-image">image</a> + <a href="https://github.com/periode/software-art-text">text</a>) , alternate <a href="https://github.com/periode/alternate-realities">realities</a>, <a href="http://commlab.nyuad.im">communications</a> lab at new york university, digital <a href="https://github.com/periode/digital-culture">culture</a> at sciences po and computational <a href="https://github.com/periode/computational-representations/">representations</a> at the Film University. He currently teaches some of these.</p>
         <p>Weaving it all together, he&rsquo;s writing a <a href="http://thesis.enframed.net">doctoral thesis</a> on the role of aesthetics in the understandings of source code.</p>
@@ -284,7 +285,7 @@
         <div class="headline">
             <img src="images/image1.png">
             <div class="date">25. Feb. 21 - 17-19h</div>
-            <h3 class="main">Eleni-Ira Panourgia on constructing behaviour from physical to digital:</h3><h3>Form, response and playability across sound and sculpture</h3>
+            <h3 class="main">Eleni-Ira Panourgia on Constructing Behaviour from Physical to Digital:</h3><h3>Form, response and playability across sound and sculpture</h3>
         </div>
         <p><span class="name">Eleni-Ira Panourgia</span> is a Teaching and Research Fellow (ATER) at Gustave Eiffel University (former Paris-Est Marne-la-Vallée). She recently completed a PhD in Art at the University of Edinburgh as a Scholar of the Onassis Foundation. Her research focuses on intersections of sculpture, spatial dimensions and sound. She is working simultaneously on physical material and sound and is interested in developing an understanding of such complex morphologies and their potential within artistic, design and social processes. Her research interests also include material exploration, audio-visual relationships, participatory and interactive design.</p>
         <div class="more">
@@ -299,7 +300,7 @@
         <div class="headline">
             <img src="images/image5.png">
             <div class="date">11. Mar. 21 - 17-19h</div>
-            <h3 class="main">Juliane Ahlborn on the computation of arts</h3><h3>Aesthetics - Subject - Education</h3>
+            <h3 class="main">Juliane Ahlborn on the Computation of Arts</h3><h3>Aesthetics - Subject - Education</h3>
         </div>
         <p><span class="name">Juliane Ahlborn</span> completed her studies of Media Education - Audiovisual Culture and Communication at the Otto-von-Guericke University Magdeburg in March 2020. She works as a research assistant at the Centre for Teacher Training at the Otto-von-Guericke University. Furthermore, she is holding a scholarship of the State of Saxony-Anhalt since July 2020. In her dissertation on <a href="https://www.ebdw.ovgu.de/ebdw/en/aiandart-p-500.html">Aesthetics - Subject - Education: The computation of arts</a>, she is concerned with changed structural conditions for education and subjectivation that owe their existence to digital mediality.</p>
         <div class="more">
