--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         <div class="headline">
             <img src="images/image1.png">
             <div class="date">April 2021</div>
-            <h3>Potential Event with <br/><strong style="font-weight: 800">Anna Xambó</strong></h3>
+            <h3>Potential Event <br/>with <br/><strong style="font-weight: 800">Anna Xambó</strong></h3>
         </div>
         <p>Dates and more information to be published.</p>
         <div class="more">
