--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
                 margin:0;
                 padding:.5em 0 0 0;
             }
+            .headline img{
+                margin:.5em 0 0 0;
+            }
             .item h3{
                 font-size: 140%;
             }
