--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <div class="date">03. Dec. 20 - 17-19h</div>
             <h3 class="main">Stefan Püst on Coding Practices and Music:</h3><h3>Towards a Textual Language Interface for High Level Composition </h3>
         </div>
-        <p>After earning his B.Sc. in Computer Science at the University of Applied Science in Brandenburg, <span class="name">Stefan Püst</span> worked as Android App developer for telematics system at the IBM Client Innovation Center in Magdeburg, next to pursuing a master&rsquo;s degree in the digital media program at the University of Applied Science in Brandenburg. Since 2016 he has worked as IT admin at the Film University Babelsberg. He was responsible for managing the computer lab infrastructure for the Animation, Set Design and Creative Technologies programs. Since 2019 Stefan Püst is a research associate in the Creative Technologies group and pursues a PhD and researches music interaction mechanisms.</p>
+        <p>After earning his B.Sc. in Computer Science at the University of Applied Science in Brandenburg, <span class="name">Stefan Püst</span> worked as Android App developer for telematics system at the IBM Client Innovation Center in Magdeburg, next to pursuing a master&rsquo;s degree in the digital media program at the University of Applied Science in Brandenburg. Since 2016 he has worked as IT admin at the Film University Babelsberg. He was responsible for managing the computer lab infrastructure for the Animation, Set Design and Creative Technologies programs. Since 2019 Stefan is a research associate in the Creative Technologies group and pursues a PhD and researches music interaction mechanisms.</p>
         <div class="more">
         <h4>More about Stefan Püst</h4>
         <ul>
