--- a/index.html
+++ b/index.html
@@ -227,8 +227,12 @@
         <td><a href="https://ovgu.zoom.us/j/94130480538?pwd=K2JUNStwR1IvVUkrZTFpTEJQMmlKdz09">941 3048 0538</a></td>
     </tr>
     <tr>
-        <td><strong>passphrase:</strong></td>
+        <td><strong>Passphrase:</strong></td>
         <td>coding</td>
+    </tr>
+    <tr>
+        <td><strong>Calendar:</strong></td>
+        <td><a href="events.ics">Download File (.ics)</a></td>
     </tr>
     </tbody>
 </table>
