--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
         .headline{
             margin:5em 0 3em 0;
         }
+        table{
+            width:100%;
+            margin:0;
+            padding:0;
+        }
+        table tr td{
+            padding:0.5em;
+            border-bottom: 1px solid #efefef;
+        }
         td strong{
             color:#bf8ece;
         }
@@ -223,7 +232,7 @@
 <table>
     <tbody>
     <tr>
-        <td><strong>Meeting-ID:</strong></td>
+        <td style="width: 20%;"><strong>Meeting-ID:</strong></td>
         <td><a href="https://ovgu.zoom.us/j/94130480538?pwd=K2JUNStwR1IvVUkrZTFpTEJQMmlKdz09">941 3048 0538</a></td>
     </tr>
     <tr>
