--- a/index.html
+++ b/index.html
@@ -151,12 +151,17 @@
             text-align: center;
             margin:2em 0;
         }
-        #footer a{
+        #footer span a{
+            opacity: 0.2;
+            transition: .5s;
             border:none;
         }
+        #footer span a:hover, #footer span a:focus{
+            opacity: 1;
+        }
         #footer img{
-            margin:0 1em;
-            height:50px;
+            margin:0 1.2em;
+            height:60px;
         }
 
         @media screen and (max-width: 1300px) {
@@ -347,7 +352,7 @@
     <div id="footer">
         <h4>About the event series</h4>
         <p>The networked series of research colloquia is organized by <a href="https://www.ebdw.ovgu.de/ebdw/en/Team/Dan+Verst%C3%A4ndig-p-232.html">Dan Verständig</a> (University of Magdeburg / Germany) and&nbsp;<a href="https://www.filmuniversitaet.de/portrait/person/angela-brennecke/">Angela Brennecke</a> (Film University KONRAD WOLF in Potsdam Babelsberg / Germany).&nbsp;</p>
-        <p>Processing Sketch used in header: <a href="http://www.openprocessing.org/sketch/1014150">Vera Molnár Interruption</a> by <a href="https://www.openprocessing.org/user/105400">Rita Eperjesi</a> Licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0https://creativecommons.org/licenses/GPL/2.0/">Creative Commons Attribution ShareAlike</a></p>
+        <p>Processing Sketch used here: <a href="http://www.openprocessing.org/sketch/1014150">Vera Molnár Interruption</a> by <a href="https://www.openprocessing.org/user/105400">Rita Eperjesi</a> Licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0https://creativecommons.org/licenses/GPL/2.0/">Creative Commons Attribution ShareAlike</a></p>
         <span>
         <a href="https://www.ebdw.ovgu.de/ebdw/en/"><img style="margin-bottom:-4px;" src="images/ovgulogo.png"></a> <a href="https://www.filmuniversitaet.de/"><img src="images/filmuniversitaet.png"></a>
         </span>
