--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Coding Literacy, Practices & Cultures</title>
@@ -353,8 +353,8 @@
 
         <h4>About the event series</h4>
         <p>The networked series of research colloquia is organized by <a href="https://www.ebdw.ovgu.de/ebdw/en/Team/Dan+Verst%C3%A4ndig-p-232.html">Dan Verständig</a> (University of Magdeburg / Germany) and&nbsp;<a href="https://www.filmuniversitaet.de/portrait/person/angela-brennecke/">Angela Brennecke</a> (Film University KONRAD WOLF in Potsdam Babelsberg / Germany).&nbsp;</p>
-        <p>Processing Sketch based on: <a href="http://www.openprocessing.org/sketch/1014150">Vera Molnár Interruption</a> by <a href="https://www.openprocessing.org/user/105400">Rita Eperjesi</a> Licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0https://creativecommons.org/licenses/GPL/2.0/">Creative Commons Attribution ShareAlike</a></p>
-        <span>
+        <p>Processing Sketch based on: <a href="http://www.openprocessing.org/sketch/1014150">Vera Molnár Interruption</a> by <a href="https://www.openprocessing.org/user/105400">Rita Eperjesi</a>. <small>Licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0https://creativecommons.org/licenses/GPL/2.0/">Creative Commons Attribution ShareAlike</a></p>
+    </small><span>
         <a href="https://www.ebdw.ovgu.de/ebdw/en/"><img style="margin-bottom:-4px;" src="images/ovgulogo.png"></a> <a href="https://www.filmuniversitaet.de/"><img src="images/filmuniversitaet.png"></a>
         </span>
     </div>
