--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://www.openprocessing.org/openprocessing_sketch.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
     <script src="js/mySketch.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript">
         $.fn.isInViewport = function () {
             let elementTop = $(this).offset().top;
@@ -33,9 +35,9 @@
             });
         });
     </script>
-    <style>
-        @import url("css/style.css") screen;
-    </style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 <div id="wrapper">
@@ -48,24 +50,27 @@
 </div>
 <div style="clear: both"></div>
 <p>We live in a world of algorithmic sorting and decision-making. Mathematical models are curating our social relationships, influencing our elections, and even deciding whether or not we should go to prison. But how much do we really know about code, algorithmic infrastructures and their cultural implications? And what can we learn about creativity in a digital age?</p>
-<p>The networked series of research colloquia on <strong class="bold-text">coding literacy, practices and cultures</strong> with international experts will give insights to the complexity of coding, digital architectures, and the different cultures code is engaged with in one form or the other. The events will be held with <a href="http://zoom.us">zoom</a>.</p>
+<p>The networked series of research colloquia on <strong class="name">coding literacy, practices and cultures</strong> with international experts will give insights to the complexity of coding, digital architectures, and the different cultures code is engaged with in one form or the other. The events will be held with <a href="http://zoom.us">zoom</a>.</p>
 <p>You can join by simply clicking on <a href="https://ovgu.zoom.us/j/94130480538?pwd=K2JUNStwR1IvVUkrZTFpTEJQMmlKdz09">this link</a> or using the following data:</p>
 <table>
     <tbody>
     <tr>
         <td style="width: 20%;"><strong>Meeting-ID:</strong></td>
         <td><a href="https://ovgu.zoom.us/j/94130480538?pwd=K2JUNStwR1IvVUkrZTFpTEJQMmlKdz09">941 3048 0538</a></td>
+        <td align="center" rowspan="2" style="border-bottom: none"> <a href="events.ics" class="btn btn-default"> Save the Dates <span class="glyphicon glyphicon-calendar"></span></a></td>
     </tr>
     <tr>
         <td><strong>Passphrase:</strong></td>
         <td>coding</td>
     </tr>
-    <tr>
-        <td><strong>Calendar:</strong></td>
-        <td><a href="events.ics">Download File (.ics)</a></td>
-    </tr>
+
     </tbody>
 </table>
+    <div id="utils">
+        <p>
+
+        </p>
+    </div>
 <hr />
     <div class="item" id="av">
         <div class="headline">
