--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <title>Coding Literacy, Practices & Cultures</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
     <script src="https://www.openprocessing.org/openprocessing_sketch.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.jssocials/1.4.0/jssocials.min.js"></script>
+
+    <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/jquery.jssocials/1.4.0/jssocials.css" />
 
     <script src="js/mySketch.js"></script>
     <script type="text/javascript">
@@ -33,10 +39,19 @@
                 });
 
             });
+            $("#shareIcons").jsSocials({
+                showLabel: false,
+                showCount: false,
+                shares: ["twitter", "facebook", "linkedin",  "whatsapp"]
+            });
         });
+
+
     </script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+
+
 
 </head>
 <body>
@@ -66,11 +81,6 @@
 
     </tbody>
 </table>
-    <div id="utils">
-        <p>
-
-        </p>
-    </div>
 <hr />
     <div class="item" id="av">
         <div class="headline">
