--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <tr>
         <td style="width: 20%;"><strong>Meeting-ID:</strong></td>
         <td><a href="https://ovgu.zoom.us/j/94130480538?pwd=K2JUNStwR1IvVUkrZTFpTEJQMmlKdz09">941 3048 0538</a></td>
-        <td align="center" rowspan="2" style="border-bottom: none"> <a href="events.ics" class="btn btn-default"> SAVE <span class="glyphicon glyphicon-calendar"></span></a></td>
+        <td align="center" rowspan="2" style="border-bottom: none"> <a href="events.ics" class="btn btn-default"> save to your calendar <span class="glyphicon glyphicon-calendar"></span></a></td>
     </tr>
     <tr>
         <td><strong>Passphrase:</strong></td>
@@ -155,7 +155,7 @@
             </ul>
         </div>
     </div>
-    
+
 <hr />
     <div id="footer">
 
