--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     <h2 id="page-title">Coding Literacy, Practices & Cultures</h2>
     <img class="spacer" src="images/spacer.png">
-    <h3>A networked series of research colloquia</h3>
+    <h3>A networked series of research colloquiua</h3>
 </div>
 <div style="clear: both"></div>
 <p>We live in a world of algorithmic sorting and decision-making. Mathematical models are curating our social relationships, influencing our elections, and even deciding whether or not we should go to prison. But how much do we really know about code, algorithmic infrastructures and their cultural implications? And what can we learn about creativity in a digital age?</p>
