--- a/index.html
+++ b/index.html
@@ -156,6 +156,24 @@
         </div>
     </div>
 
+
+    <div class="item" id="ax">
+        <div class="headline">
+            <img src="images/image1.png">
+            <div class="date">29. Apr. 21 - 17-19h</div>
+            <h3 class="main">Anna Xambó</h3><h3> on  </h3>
+        </div>
+        <p><span class="name">Anna Xambó</span> is currently a Senior Lecturer in Music and Audio Technology at the Faculty of Computing, Engineering and Media (CEM) at De Montfort University (DMU) and work as the principal investigator (PI) for the EPSRC HDI Network Plus funded project <a href="https://mirlca.dmu.ac.uk">“MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding”</a> at the <a href="https://www.dmu.ac.uk/research/research-faculties-and-institutes/technology/mtirc/mtirc.aspx">Music, Technology and Innovation - Institute for Sonic Creativity (MTI^2)</a> in Leicester, UK. She is also the programme leader of the <a href="https://www.dmu.ac.uk/study/courses/undergraduate-courses/digital-music-technology-bsc-degree/digital-music-technology-bsc-degree.aspx">BSc Digital Music Technology</a> programme. Since 2019, <span class="name">Anna</span> is an Associate Fellow at the Higher Education Academy.</p>
+
+        <div class="more">
+            <h4>More about Juliane Ahlborn</h4>
+            <ul>
+                <li>Her personal website: <a href="http://annaxambo.me/">annaxambo.me/</a></li>
+                <li>Anna Xambó on twitter: <a href="https://twitter.com/annaxambo">twitter.com/annaxambo</a></li>
+            </ul>
+        </div>
+    </div>
+
 <hr />
     <div id="footer">
 
