--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="more">
             <h4>More about Anna Xambó</h4>
             <ul>
-                <li>Her personal website: <a href="http://annaxambo.me/">annaxambo.me/</a></li>
+                <li>Her personal website: <a href="http://annaxambo.me/">annaxambo.me</a></li>
                 <li>Anna Xambó on twitter: <a href="https://twitter.com/annaxambo">twitter.com/annaxambo</a></li>
             </ul>
         </div>
