--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <h4>More about Anna Xambó</h4>
             <ul>
                 <li>Her personal website: <a href="http://annaxambo.me/">annaxambo.me</a></li>
-                <li>Anna Xambó on twitter: <a href="https://twitter.com/annaxambo">twitter.com/annaxambo</a></li>
+                <li>Anna Xambó Sedó on twitter: <a href="https://twitter.com/annaxambo">twitter.com/annaxambo</a></li>
             </ul>
         </div>
     </div>
