--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="headline">
             <img src="images/image1.png">
             <div class="date">29. Apr. 21 - 17-19h</div>
-            <h3 class="main">Anna Xambó Sedó collaborative live coding</h3> <h3>Insights in MIRLCAuto: A virtual agent for music information retrieval in live coding.</h3>
+            <h3 class="main">Anna Xambó Sedó on collaborative live coding</h3> <h3>Insights in MIRLCAuto: A virtual agent for music information retrieval in live coding.</h3>
         </div>
         <p><span class="name">Anna Xambó Sedó</span> is a researcher and musician with background in computer science engineering, digital humanities and digital arts. She is currently a Senior Lecturer in Music and Audio Technology at the Faculty of Computing, Engineering and Media (CEM) at De Montfort University (DMU) and work as the principal investigator (PI) for the EPSRC HDI Network Plus funded project <a href="https://mirlca.dmu.ac.uk">MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding</a> at the <a href="https://www.dmu.ac.uk/research/research-faculties-and-institutes/technology/mtirc/mtirc.aspx">Music, Technology and Innovation - Institute for Sonic Creativity (MTI^2)</a> in Leicester, UK. She is also the programme leader of the <a href="https://www.dmu.ac.uk/study/courses/undergraduate-courses/digital-music-technology-bsc-degree/digital-music-technology-bsc-degree.aspx">BSc Digital Music Technology</a> programme. Since 2019, she
             is an Associate Fellow at the Higher Education Academy.</p>
