--- a/index.html
+++ b/index.html
@@ -176,6 +176,26 @@
         </div>
     </div>
 
+    <div class="item" id="nps">
+        <div class="headline">
+            <img src="images/image3.png">
+            <div class="date">13. May 21 - 17-19h</div>
+            <h3 class="main">Nick Seaver on Refiguring the Black Box:</h3> <h3> The Ethnography of Algorithmic Systems</h3>
+        </div>
+        <p><span class="name">Nick Seaver</span> is an assistant professor in the <a href="http://ase.tufts.edu/anthropology/">Department of Anthropology</a> at Tufts University, where he also teaches in the <a href="http://as.tufts.edu/sts/">Science, Technology, and Society</a>&nbsp;program. Before that, he got his undergraduate degree in <a href="http://complit.yale.edu/literature-major">Literature</a> at Yale University, a Masters of Science in <a href="http://cmsw.mit.edu/">Comparative Media Studies</a> from MIT, and his PhD in <a href="http://www.anthropology.uci.edu/">Anthropology</a> from UC Irvine.</p>
+        <p>He is writing a book about the makers of music recommender systems and how they think, about music, listeners, and listening. <em>Computing Taste: The Making of Algorithmic Music Recommendation</em> draws on years of ethnographic fieldwork with researchers, engineers, and others in industry and academia.
+            <span class="name">Nick Seaver</span> also wrote the significant contributions on <a href="https://journals.sagepub.com/doi/abs/10.1177/2053951717738104" target="_blank">the ethnography of algorithmic systems</a> and <a href="http://dspace.mit.edu/handle/1721.1/59573" target="_blank">the history of player pianos</a>.</p>
+        <div class="more">
+            <h4>More about Nick Seaver</h4>
+            <ul>
+                <li>Tufts University: <a href="https://ase.tufts.edu/anthropology/people/seaver.htm">ase.tufts.edu/anthropology/people/seaver.htm</a></li>
+                <li>His personal website: <a href="http://nickseaver.net//">nickseaver.net</a></li>
+                <li>Nick Seaver on twitter: <a href="https://twitter.com/npseaver">twitter.com/npseaver</a></li>
+            </ul>
+        </div>
+    </div>
+
+
 <hr />
     <div id="footer">
 
