closing event added
added the closing event

--- a/index.html
+++ b/index.html
@@ -195,6 +195,31 @@
         </div>
     </div>
 
+    <div class="item" id="wsgx">
+        <div class="headline">
+            <img src="images/image1.png">
+            <div class="date">17. June 21 - 17-19h</div>
+            <h3 class="main">Winnie Soon and Geoff Cox on</h3> <h3> Aesthetic Programming: A Handbook of Software Studies</h3>
+        </div>
+        <p>
+        At this closing event, <span class="name">Winnie Soon</span> and <span class="name">Geoff Cox</span> will talk about their recently published book project: Aesthetic Programming: A Handbook for Software Studies. The project explores the technical as well as cultural imaginaries of programming from its insides. It follows the principle that the growing importance of software requires a new kind of cultural thinking — and curriculum — that can account for, and with which to better understand the politics and aesthetics of algorithmic procedures, data processing and abstraction.
+        </p>
+        <p>
+        Born and raised in Hong Kong, <span class="name">Winnie Soon</span> (she/they) has a background in Information Systems and Computing (<a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>), Media Cultures (School of Creative Media, City University of Hong Kong), Digital Art and Technology (<a href="https://www.plymouth.ac.uk/">University of Plymouth</a>), and has a PhD in Software (Art) Practice (Aarhus University). Her research and practice focus on software publishing, critical technical-art practice, and aesthetic programming. is an artist-researcher interested in queering the intersections of technical and artistic practices as a critical/feminist/queer praxis, with works appearing in museums, galleries, festivals, distributed networks, papers and books. Researching in the areas of software studies and computational practices, she/they is currently based in Denmark and working as Associate Professor at Aarhus University.
+        </p>
+        <p><span class="name">Geoff Cox</span> is Associate Professor/co-Director of the <a href="http://www.centreforthestudyof.net/">Centre for the Study of the Networked Image</a>, London South Bank University (UK) and Associate Professor in the Dept. of Aesthetics and Communication (DK), currently engaged on a 3 year research project <a href="http://contemporaneity.au.dk">The Contemporary Condition</a> funded by the Danish Council for Independent Research (with Jacob Lund). As part of this, he published (with Jacob Lund) <a href="https://www.sternberg-press.com/product/the-contemporary-condition-introductory-thoughts-on-contemporaneity-and-contemporary-art/"><em>The Contemporary Condition: Introductory Thoughts on Contemporaneity and Contemporary Art</em></a>, as the first in a <a href="https://www.sternberg-press.com/series/the-contemporary-condition-series/">series</a> of small co-edited books published by Sternberg Press. With Christian Ulrik Andersen, he co-runs a yearly workshop/publication in collaboration with transmediale festival in Berlin and is co-editor of the associated open access online journal <a href="http://www.aprja.net">APRJA</a>; and is co-editor of the <a href="http://www.data-browser.net">DATA browser</a> book series published by Autonomedia. With Alex McLean, he wrote <a href="http://www.speaking-code.net/"><em>Speaking Code: coding as aesthetic and political expression</em></a> (MIT Press 2013), and amongst other things is currently working on a book project about live coding.
+        </p>
+        <div class="more">
+            <h4>More about Winnie Soon and Geoff Cox</h4>
+            <ul>
+                <li>Winnie Soon at Aarhus University <a href="https://pure.au.dk/portal/en/persons/winnie-soon(061827be-c4d8-4af0-a301-835512c973e2).html">pure.au.dk/portal/en/persons/winnie-soon</a>
+                <li>Personal website of Winnie Soon: <a href="https://siusoon.net/">siusoon.net/</a></li>
+                <li>Geoff Cox at Aarhus University: <a href="https://pure.au.dk/portal/en/persons/geoff-cox(12ea26ce-0032-475a-b951-74c8ba44d239).html">pure.au.dk/portal/en/persons/geoff-cox</a></li>
+                <li>Website of Aesthetic Programming: A Handbook of Software Studies<a href="http://aesthetic-programming.net/">aesthetic-programming.net</a>
+                <li>GitLab Repository of Aesthetic Programming: <a href="https://gitlab.com/aesthetic-programming/book">gitlab.com/aesthetic-programming/book</a></li>
+            </ul>
+        </div>
+    </div>
 
 <hr />
     <div id="footer">
