--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <li>Winnie Soon at Aarhus University <a href="https://pure.au.dk/portal/en/persons/winnie-soon(061827be-c4d8-4af0-a301-835512c973e2).html">pure.au.dk/portal/en/persons/winnie-soon</a>
                 <li>Personal website of Winnie Soon: <a href="https://siusoon.net/">siusoon.net/</a></li>
                 <li>Geoff Cox at Aarhus University: <a href="https://pure.au.dk/portal/en/persons/geoff-cox(12ea26ce-0032-475a-b951-74c8ba44d239).html">pure.au.dk/portal/en/persons/geoff-cox</a></li>
-                <li>Website of Aesthetic Programming: A Handbook of Software Studies<a href="http://aesthetic-programming.net/">aesthetic-programming.net</a>
+                <li>Website of Aesthetic Programming: A Handbook of Software Studies: <a href="http://aesthetic-programming.net/">aesthetic-programming.net</a>
                 <li>GitLab Repository of Aesthetic Programming: <a href="https://gitlab.com/aesthetic-programming/book">gitlab.com/aesthetic-programming/book</a></li>
             </ul>
         </div>
