--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="headline">
             <img src="images/image1.png">
             <div class="date">17. June 21 - 17-19h</div>
-            <h3 class="main">Winnie Soon and Geoff Cox on</h3> <h3> Aesthetic Programming: A Handbook of Software Studies</h3>
+            <h3 class="main">Winnie Soon and Geoff Cox on Aesthetic Programming</h3> <h3>A Handbook of Software Studies</h3>
         </div>
         <p>
         At this closing event, <span class="name">Winnie Soon</span> and <span class="name">Geoff Cox</span> will talk about their recently published book project: Aesthetic Programming: A Handbook for Software Studies. The project explores the technical as well as cultural imaginaries of programming from its insides. It follows the principle that the growing importance of software requires a new kind of cultural thinking — and curriculum — that can account for, and with which to better understand the politics and aesthetics of algorithmic procedures, data processing and abstraction.
